--- a/styles/form.css
+++ b/styles/form.css
@@ -154,6 +154,7 @@ form input{
     border-top: none;
     border-left: none;
     border-right: none;
+    border-radius: none;
 }
 
 form button {
