--- a/styles/about.css
+++ b/styles/about.css
@@ -1,14 +1,14 @@
 :root {
-    --primary-color: #F5F6F8;
-    --bt-icon-color: rgba(245, 246, 248, 0.239);
-    --card-color: #ffffff;
-    --card-border-color: #E7E8EA; 
-    --border-color: #B8BAC1; 
-    --text-color-light: #B8BAC1; 
-    --text-dark-color: #181818;
-    --bt-color-disabled: #95A3F5;
-    --bt-color-hover: #2B48EC;
-    --bt-color-clicked: #142DB8;
+  --primary-color: #F5F6F8;
+  --bt-icon-color: rgba(245, 246, 248, 0.239);
+  --card-color: #ffffff;
+  --card-border-color: #E7E8EA;
+  --border-color: #B8BAC1;
+  --text-color-light: #B8BAC1;
+  --text-dark-color: #181818;
+  --bt-color-disabled: #95A3F5;
+  --bt-color-hover: #2B48EC;
+  --bt-color-clicked: #142DB8;
 }
 
 .about-modal {
@@ -30,18 +30,17 @@
 }
 
 .about-modal-content {
-    background-color: var(--primary-color);
-    padding: 72px;
-    width: 100%;
-    max-width: 600px;
-    height: 100vh; /* Garante altura total da tela */
-    box-sizing: border-box;
-    position: absolute;
-    top: 0;
-    right: 0;
-    text-align: left;
-    overflow-y: auto; /* Permite scroll dentro do modal */
-    animation: slide-in-about 0.2s ease-out forwards;
+  background-color: var(--primary-color);
+  padding: 72px;
+  width: 100%;
+  height: 100vh; /* Garante altura total da tela */
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: left;
+  overflow-y: auto; /* Permite scroll dentro do modal */
+  animation: slide-in-about 0.2s ease-out forwards;
 }
 
 .about-modal-header {
@@ -70,21 +69,23 @@
 }
 
 .about-text-content {
-    font-family: Helvetica !important;    
-    color: var(--text-dark-color);
+  font-family: Helvetica !important;
+  color: var(--text-dark-color);
 }
 
 .about-text-content h1 {
-    font-weight: 700;
-    font-size: 9.6rem;
-    letter-spacing: -3%;
-    margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 9.6rem;
+  letter-spacing: -3%;
+  margin-bottom: 30px;
 }
 
 .about-text-content p {
-  font-size: 1.2rem;
+  font-size: 2rem;
   line-height: 1.5;
   margin-bottom: 20px;
+  line-height: 28px;
+  max-width: 600px;
 }
 
 @keyframes slide-in-about {
@@ -108,7 +109,7 @@
 @media (max-width: 768px) {
   .about-modal-content {
     padding: 24px 15px;
-    max-width: 95vw;
+    max-width: 100vw;
     height: 100vh;
   }
 
