--- a/styles/about.css
+++ b/styles/about.css
@@ -18,10 +18,11 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: opacity 0.2s ease-out;
+  padding-bottom: 40px;
 }
 
 .about-modal.show {
