--- a/styles/about.css
+++ b/styles/about.css
@@ -71,6 +71,7 @@
 .about-text-content {
   font-family: Helvetica !important;
   color: var(--text-dark-color);
+  background-color: #142DB8;
   padding-bottom: 100px;
 }
 
