--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,13 @@ body {
 
 @media (max-width: 768px) {
     body {
-        padding: 0 30px;
+        padding: 0 30px 30px 30px;
     }
 }
 
 @media (max-width: 510px) {
     body {
-        padding: 0 20px;
+        padding: 0 20px 20px 20px;
     }
 }
 
@@ -35,6 +35,7 @@ body {
     --border-color: #B8BAC1;
     --text-color-light: #B8BAC1;
     --text-dark-color: #181818;
+    --icon-color-hover: rgba(24, 24, 24, 0.56);
     --bt-color-disabled: #95A3F5;
     --bt-color-hover: #2B48EC;
     --bt-color-clicked: #142DB8;
@@ -124,13 +125,13 @@ nav.menu {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 8px;
+    gap: 16px;
     min-width: 200px;
     overflow: visible;
 }
 
 .menu-date:hover {
-    background-color: var(--bt-color-hover);
+    color: var(--icon-color-hover);
 }
 
 .date-text {
@@ -173,6 +174,10 @@ nav.menu {
     padding: 10px 0;
     cursor: pointer;
     transition: color 0.2s;
+}
+
+.dropdown-menu li:hover {
+    color: var(--bt-color-hover);
 }
 
 @media (max-width: 768px) {
@@ -237,8 +242,11 @@ input[type="checkbox"]:checked + .checkmark .check-icon {
 
 .hero h1 {
     color: var(--text-dark-color);
-    font-size: 12.8rem;
+    font-family: Helvetica;
     font-weight: 700;
+    font-size: 128px;
+    line-height: 128px;
+    letter-spacing: -9px;
 }
 
 @media (max-width: 768px) {
