--- a/styles/style.css
+++ b/styles/style.css
@@ -109,7 +109,7 @@ nav.menu {
 }
 
 .menu-icons {
-    max-width: 370px;
+    min-width: 400px;
     display: flex;
     align-items: center;
     gap: 16px;
@@ -126,8 +126,9 @@ nav.menu {
     align-items: center;
     justify-content: flex-start;
     gap: 16px;
-    min-width: 200px;
+    width: fit-content;
     overflow: visible;
+    padding: 24px;
 }
 
 .menu-date:hover {
@@ -153,15 +154,15 @@ nav.menu {
     top: 100%;
     margin-top: 0px;
     margin-left: -50px;
-    padding: 16px;
+    padding: 24px;
     width: 300px;
     z-index: 10;
     display: flex;
     flex-direction: column;
     list-style: none;
-    border-radius: 24px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    background-color: var(--primary-color);
+    border-radius: 16px;
+    border: 1px solid var(--border-color);
+    background-color: var(--card-color);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
@@ -262,8 +263,12 @@ input[type="checkbox"]:checked + .checkmark .check-icon {
     }
 
     .hero h1 {
-        font-size: 7.2rem;
         padding-top: 150px;
+        
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 7.2rem;
+        letter-spacing: -3px;
     }
 }
 
