--- a/styles/about.css
+++ b/styles/about.css
@@ -50,15 +50,16 @@
 }
 
 .about-close-btn {
+  display: flex;
   font-size: 27px;
   width: 30px;
   height: 30px;
+  line-height: 30px;
   background-color: rgba(255, 255, 255, 0.15);
   color: var(--text-dark-color);
   border: none;
   border-radius: 100%;
   cursor: pointer;
-  display: flex;
   align-items: center;
   justify-content: center;
 }
