--- a/styles/about.css
+++ b/styles/about.css
@@ -51,11 +51,12 @@
 
 .about-close-btn {
   display: flex;
-  font-size: 27px;
+  font-size: 25px;
   width: 30px;
   height: 30px;
   line-height: 30px;
   background-color: rgba(255, 255, 255, 0.15);
+  background-color: #142DB8;
   color: var(--text-dark-color);
   border: none;
   border-radius: 100%;
