--- a/styles/form.css
+++ b/styles/form.css
@@ -17,6 +17,8 @@ form {
     flex-direction: column;
 
     justify-content: start;
+    padding-bottom: 50px;
+    padding-top: 50px;
 }
 
 form label {
