--- a/styles/modal.css
+++ b/styles/modal.css
@@ -20,9 +20,8 @@
     top: 0;
     right: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    /* O background aparece imediatamente sem animação */
     transition: opacity 0.2s ease-out; /* Transição suave da opacidade */
     opacity: 0; /* Inicialmente invisível */
 }
