--- a/styles/modal.css
+++ b/styles/modal.css
@@ -9,7 +9,7 @@
     --icon-color-hover: #1818188F;
     --bt-color-disabled: #95A3F5;
     --bt-color-hover: #2B48EC;
-    --bt-color-clicked: #142DB8;
+    --bt-color-enable: #142DB8;
 }
 
 /* Modal */
