--- a/styles/style.css
+++ b/styles/style.css
@@ -38,7 +38,7 @@ body {
     --icon-color-hover: #1818188F;
     --bt-color-disabled: #95A3F5;
     --bt-color-hover: #2B48EC;
-    --bt-color-clicked: #142DB8;
+    --bt-color-enable: #142DB8;
 }
 
 /* Header e navegação */
